kubernetes/apps/identity-provider/keycloak/app/accessgrant.yaml
apiVersion: authorization.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-keycloak-service
spec:
  grant:
    kind: Service
    name: keycloak-service
    namespace: idp
    accessReview:
      apiVersion: authorization.k8s.io/v1
      kind: AccessReview
      metadata:
        name: keycloak-service-access
