kubernetes/apps/identity-provider/keycloak/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-httproute
spec:
  hostnames: ["accounts.darkfellanetwork.com"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: keycloak-service
          namespace: idp
          port: 80
