kubernetes/apps/identity-provider/keycloak/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: idp
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: zerossl-prod
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - &host accounts.darkfellanetwork.com
        - admin.darkfellanetwork.com
      secretName: keycloak-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin-ingress
  namespace: idp
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host admin.darkfellanetwork.com
      secretName: keycloak-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 443
