kubernetes/apps/identity-provider/keycloak/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: external
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-v17
            cnpg.io/instanceRole: primary
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak-operator
  ingress:
    - {}
  egress:
    - toEntities:
          - kube-apiserver
      toPorts:
        - ports:
            - port: "6444"
              protocol: TCP
